# coinbase-trade-assistant-mcp

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  example_mcp_config.json  main.py  pyproject.toml  setup.sh  test_server.py
ai_guidance/: technical_analysis_best_practices.md
