[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["coinbase_trade_assistant_mcp"]
[project]
name = "coinbase-trade-assistant-mcp"
version = "0.1.0"
description = "Sophisticated MCP server for Coinbase cryptocurrency trading assistance with automated technical analysis screening"
authors = [
    {name = "AI Workspace", email = "angrysky56@github.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.12.4",
    "coinbase-advanced-py>=1.8.2",
    "pandas>=2.3.1",
    "numpy>=1.26.0",
    "ta-lib>=0.6.5",
    "asyncio-throttle>=1.0.2",
    "python-dotenv>=1.1.1",
    "aiofiles>=23.2.1",
    "websockets>=12.0",
    "coinbase>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/ai-workspace/coinbase-trade-assistant-mcp"
Repository = "https://github.com/ai-workspace/coinbase-trade-assistant-mcp"
Issues = "https://github.com/ai-workspace/coinbase-trade-assistant-mcp/issues"

[project.scripts]
coinbase-trade-assistant = "main:main"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "ARG", "SIM"]
ignore = ["E501", "E731"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
